# ML-Learning

./: .gitignore  README.md  mand.py
CXXSource/: CMakeLists.txt  compile_commands.json  downloading_dataset.py  main.cpp
CXXSource/include/: modules.hpp
CXXSource/models/: MNISTClassification.pt
CXXSource/pysupports/: dense_net_MNIST.py  downloading_dataset.py  huggingface_datasets.py  transformer_MNIST.py
CXXSource/src/: Modules.cpp
MLAPP/chapter-1/: note.md
MLAPP/chapter-2/: Exercise.md  note.md
MLAPP/chapter-3/: exercise.md  note.md
MLAPP/chapter-4/: note.md
MML-Book/: MML-Part1.md  MML-Part2.md
PMLAI/pysource/: iris_plot.py
WebScrapting/: example_spider.py  note.md  quotes.csv  quotes.jsonl
WebScrapting/bili_api/: bili.csv  data_collection.py  detailed_analysis.py  main.py  overall_analysis.py  relation.py
WebScrapting/bili_scraper/: Bilibili_main.html  bili-scraper-BV1Ga4y1u7fh.html  bili-scraper-www.bilibili.com.html  bili.csv  request.py  scrapy.cfg
WebScrapting/bili_scraper/bili_scraper/: items.py  middlewares.py  pipelines.py  settings.py
WebScrapting/tutorial/: author.csv  quotes.csv
WebScrapting/tutorial/tutorial/: settings.py
d2l/chapter-1/: data-g.py  diff.py  note.md  prob.py  tensor.py
d2l/chapter-2/: FM_load.py  accelerate.py  easy-linreg.py  linear-regression.py  normal.py  note.md  softmax-0.py  softmax-1.py  softmax.py
d2l/chapter-3/: MLP.py  eMLP.py  house_price.py  mhouse_price.py  note.md  poly.py
d2l/chapter-4/: io.py  mlp.params  note.md
d2l/chapter-5/: LeNet.py  note.md
d2l/chapter-6/: AlexNet  AlexNet.py  DenseNet  DenseNet.py  GoogLeNet.py  note.md
d2l/chapter-7/: data_preprocessing.py  note.md
d2l/chapter-8/: encoder-decoder.py  note.md
d2l/chapter-9/: RNN.py  RNNconcise.py  data_preprocess.py  lstm.py  note.md
d2l/torch_tutorials/: autograd.py  introduction_to_pytorch.py  linear_regression.py  loading_models.py  oop-implementation.py  visualizing_dataset.py
kaggle/house_price/: hp.py  t.py
(+7 files in other folders)
